--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
 
     // Kakao Login
     implementation "com.kakao.sdk:v2-user:2.13.0" // 카카오 로그인
+
+    implementation "androidx.security:security-crypto:1.0.0" // Encrypted Shared Preference
 }
