--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // LifeCycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+
     // Login
     implementation "com.kakao.sdk:v2-user:2.13.0" // 카카오 로그인
     implementation 'com.google.android.gms:play-services-auth:20.6.0' // 구글 로그인
