--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 
         <activity android:name=".ui.login.StartActivity" />
         <activity android:name=".ui.login.KakaoLoginWebViewActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
 
     </application>
 
