--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.6.0' // 구글 로그인
 
     implementation "androidx.security:security-crypto:1.0.0" // Encrypted Shared Preference
+
+    // UI
+    implementation 'com.sothree.slidinguppanel:library:3.4.0' // Sliding pannel
 }
