--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,6 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio
+
+# google-services.json
+google-services.json
