--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services' version '4.3.10' apply false
 }
 
 android {
@@ -70,4 +71,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.6.0' // 구글 로그인
 
     implementation "androidx.security:security-crypto:1.0.0" // Encrypted Shared Preference
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
