--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity android:name=".ui.login.KakaoLoginWebViewActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity
-            android:name=".ui.login.HomeActivity"
+            android:name=".ui.main.HomeActivity"
             android:theme="@style/Theme.Android_TtuckTtak.Home"/>
 
     </application>
