Fix Login page & find password page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ android {
     viewBinding {
         enabled = true
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
