--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ui.login.StartActivity" />
         <activity android:name=".ui.login.KakaoLoginWebViewActivity" />
         <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.login.FindPwActivity" />
         <activity
             android:name=".ui.main.HomeActivity"
             android:theme="@style/Theme.Android_TtuckTtak.Home"/>
