--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,15 +27,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.login.StartActivity"/>
+        <activity android:name=".ui.login.LandingActivity"/>
         <activity android:name=".ui.login.KakaoLoginWebViewActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.main.HomeActivity"
             android:theme="@style/Theme.Android_TtuckTtak.Home" />
         <activity android:name=".ui.login.FindPwActivity" />
-        <activity
-            android:name=".ui.main.HomeActivity"
-            android:theme="@style/Theme.Android_TtuckTtak.Home"/>
         <activity android:name=".ui.setting.SettingsActivity" />
 
         <activity android:name=".ui.setting.SettingsAlertActivity" />
