--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         <activity android:name=".ui.login.FindPwActivity" />
         <activity android:name=".ui.setting.SettingsActivity" />
         <activity android:name=".ui.login.ResetPwActivity" />
+        <activity android:name=".ui.terms.TermsUseActivity" />
+        <activity android:name=".ui.terms.TermsPromoteActivity" />
 
         <activity android:name=".ui.setting.SettingsAlertActivity" />
         <activity android:name=".ui.setting.SettingsProfileActivity" />
