--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // Lottie
+    implementation 'com.airbnb.android:lottie:3.0.7'
 }
