--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,14 +33,19 @@
         <activity android:name=".ui.main.StartActivity" />
         <activity android:name=".ui.main.HomeActivity"
             android:theme="@style/Theme.Android_TtuckTtak.Home" />
+
         <activity android:name=".ui.login.FindPwActivity" />
-        <activity android:name=".ui.setting.SettingsActivity" />
         <activity android:name=".ui.login.ResetPwActivity" />
         <activity android:name=".ui.terms.TermsUseActivity" />
         <activity android:name=".ui.terms.TermsPromoteActivity" />
 
-        <activity android:name=".ui.setting.SettingsAlertActivity" />
-        <activity android:name=".ui.setting.SettingsProfileActivity" />
+        <activity android:name=".ui.setting.SettingsActivity"
+            android:theme="@style/Theme.Android_TtuckTtak.Setting"/>
+        <activity android:name=".ui.setting.SettingsAlertActivity"
+            android:theme="@style/Theme.Android_TtuckTtak.Setting" />
+        <activity android:name=".ui.setting.SettingsProfileActivity"
+            android:theme="@style/Theme.Android_TtuckTtak.Setting" />
+
         <activity android:name=".ui.join.JoinPart1Activity" />
         <activity android:name=".ui.join.JoinPart2Activity" />
         <activity android:name=".ui.join.JoinPart3Activity" />
