--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,19 @@
         <activity
             android:name=".SplashActivity"
             android:exported="true"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/Theme.Android_TtuckTtak.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.login.LandingActivity"/>
+        <activity android:name=".ui.login.LandingActivity"
+            android:theme="@style/Theme.Android_TtuckTtak.Landing"/>
         <activity android:name=".ui.login.KakaoLoginWebViewActivity" />
         <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.main.StartActivity" />
+        <activity android:name=".ui.main.StartActivity"
+            android:theme="@style/Theme.Android_TtuckTtak.Home"/>
         <activity android:name=".ui.main.HomeActivity"
             android:theme="@style/Theme.Android_TtuckTtak.Home" />
         <activity android:name=".ui.login.FindPwActivity" />
