--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_TtuckTtak"
-        android:usesCleartextTraffic="true" >
+        android:usesCleartextTraffic="true"
+        android:enableOnBackInvokedCallback="true"
+        tools:targetApi="tiramisu" >
 
         <activity
             android:name=".SplashActivity"
@@ -57,6 +59,10 @@
         <activity android:name=".ui.problem.ProblemYNActivity"
             android:theme="@style/Theme.Android_TtuckTtak.Home" />
         <activity android:name=".ui.solution.SolutionBeforeActivity"
+            android:theme="@style/Theme.Android_TtuckTtak.Home" />
+        <activity android:name=".ui.solution.SolutionActivity"
+            android:theme="@style/Theme.Android_TtuckTtak.Home" />
+        <activity android:name=".ui.solution.SolutionDescActivity"
             android:theme="@style/Theme.Android_TtuckTtak.Home" />
 
 
