[Chore] 파일 이름, 위치 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         tools:targetApi="tiramisu" >
 
         <activity
-            android:name=".SplashActivity"
+            android:name=".ui.login.SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.Android_TtuckTtak.Splash">
             <intent-filter>
