--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.hilt_version = '2.47'
+    ext.kotlin_version = '1.8.0'
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
