--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
             android:theme="@style/Theme.Android_TtuckTtak.Home"/>
         <activity android:name=".ui.main.HomeActivity"
             android:theme="@style/Theme.Android_TtuckTtak.Home" />
+        <activity android:name=".ui.main.DiagnosisActivity" />
 
         <activity android:name=".ui.login.FindPwActivity" />
         <activity android:name=".ui.login.ResetPwActivity" />
